# Atlas-hub

./: .gitignore  CMakeLists.txt  README.md  main.cpp  qtcreator_fr.ts
TESTES/: UNIFICACAO.md  traducoes_unificadas.ts
atlas/: main.cpp
atlas/core/: image_processing.cpp  image_processing.hpp  ocr_engine.cpp  ocr_engine.hpp  screen_capture.cpp  screen_capture.hpp
atlas/input/: hotkey_manager.cpp  hotkey_manager.hpp
atlas/ui/: app_window.cpp  app_window.hpp
atlas/utils/: command_loop.cpp  command_loop.hpp
cmake/: copy_tesseract_runtime.cmake
core/: AppController.cpp  AppController.h  HotkeyManager.cpp  HotkeyManager.h  OCRService.cpp  OCRService.h  TranslationService.cpp  TranslationService.h
installer/: AtlasHubInstaller.iss
modules/capture/: ScreenCapture.cpp  ScreenCapture.h  ScreenOverlay.cpp  ScreenOverlay.h
modules/ocr/: OCRManager.cpp  OCRManager.h
resources/: app.rc  branding.qrc
translations/: atlashub_en_US.ts  atlashub_fr_FR.ts  atlashub_pt_BR.ts
ui/: MainWindow.cpp  MainWindow.h  MainWindow.ui  OCRWindow.cpp  OCRWindow.h  OCRWindow.ui  ScreenCaptureOverlay.cpp  ScreenCaptureOverlay.h
utils/: ConfigManager.cpp  ConfigManager.h  GlobalHotkey.cpp  GlobalHotkey.h  Logger.cpp  Logger.h
